[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tox4"
version = "0.0.0"
description = "shim module for running 'pipx run tox4'"
authors = [{name = "Thomas Grainger", email = "tox4@graingert.co.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["tox>=4.0.0a10"]

[project.urls]
Home = "https://github.com/graingert/tox4"
